Playing with JS event binding

--- a/custom-dropdown.html
+++ b/custom-dropdown.html
@@ -21,10 +21,9 @@
     <style>
       @import './_ui/css/main.css';
     </style>
-    <script src="./_ui/js/CustomDropdown.js"></script>
     <script src="./_ui/js/InitShadowDropdown.js"></script>
     <div class="custom-dropdown" role="listbox">
-      <a href="#linklist2" class="trigger">Select option</a>
+      <a href="#linklist2" class="trigger" id="shadowTrigger">Select option</a>
       <ul id="linklist2" aria-hidden="true" class="custom-dropdown">
         <li><a href="#">Link 1</a></li>
         <li><a href="#">Link 2</a></li>
