--- a/custom-dropdown.html
+++ b/custom-dropdown.html
@@ -24,13 +24,13 @@
     </ul>
   </div>
   <!-- start Shadow Dom version -->
+  <h2>Dropdown Web Component</h2>
   <template>
     <style>
       @import './_ui/css/main.css';
     </style>
     <script src="./_ui/js/InitShadowDropdown.js"></script>
-    <h2>Dropdown Web Component</h2>
-    <div class="custom-dropdown" id="dropdown2">
+    <div class="shadow-dropdown" id="dropdown2">
       <button id="label2" role="tab" aria-controls="linklist2">
         <span class="accessLabel"></span>
         select option
