Updating test page heading

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </html>
 <body>
   <header>
-    <h1>Web Components & ARIA</h1>
+    <h1>Web Components & Accessibility Sandbox</h1>
   </header>
   <main>
     <section>
