--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
       </header>
       <template>
         <div class="article-inner-wrapper">
-          <h2><a href="http://baltimore.craigslist.org/crg/4298347086.html">DRIVER WITH 4 WHEEL DRIVE VEHICLE NEEDED FOR EMERGENCY TACO BELL RUN</a></h2>
+          <h2><a href="http://baltimore.craigslist.org/crg/4298347086.html" target="_blank" title="Link opens in a new window">DRIVER WITH 4 WHEEL DRIVE VEHICLE NEEDED FOR EMERGENCY TACO BELL RUN</a></h2>
           <p>It's a snowy night. You have a few drinks, play some video games and then it hits you–an overwhelming desire for a taco.</p>
           <p>That's what apparently happened to one Baltimorean last night who posted on Craigslist.</p>
+          <p><a href="http://baltimore.craigslist.org/crg/4298347086.html" target="_blank" title="Link opens in a new window">View on Craigslist</a></p>
         </div>
       </template>
       <taco-article></taco-article>
