Styling name tag so I don't hate it

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <style>@import url('./assets/styles/shadow-content.css')</style>
           <div class="outer">
             <div class="boilerplate">
-              <h3>Hi! My name is</h3>
+              <h3>HELLO<span>my name is</span></h3>
             </div>
             <div class="name">
               <h4>
