--- a/index.html
+++ b/index.html
@@ -26,8 +26,40 @@
           <h3>Name tag example</h3>
         </header>
         <div class="name-tag">Bob</div>
-        <template id="name-tag-template">
-          <style>@import url('./assets/styles/shadow-content.css')</style>
+        <template id="name-tag-template"><style>.outer {
+  background: #5bc8ff;
+  border: 2px solid #5bc8ff;
+  border-radius: 1em;
+  font-size: 20pt;
+  min-height: 7em;
+  margin-bottom: 1em;
+  text-align: center;
+  width: 12em;
+}
+.boilerplate {
+  color: white;
+  font-family: sans-serif;
+  padding: 0.5em;
+}
+.boilerplate h3 {
+  margin: 0;
+}
+.boilerplate h3 span {
+  display: block;
+  font-size: 80%;
+  line-height: 85%;
+}
+.name {
+  background: white;
+  color: black;
+  font-size: 45pt;
+  padding-top: 0.2em;
+}
+.name h4 {
+  margin: 0;
+  padding-bottom: 10px;
+}
+</style>
           <div class="outer">
             <div class="boilerplate">
               <h3>HELLO<span>my name is</span></h3>
