Adding taco-nyan theme and footer info

--- a/index.html
+++ b/index.html
@@ -152,6 +152,16 @@
       </div>
     </section>
   </main>
+  <footer>
+    <ul>
+      <li>
+        <h4>Sandbox by <a href="http://marcysutton.com/" target="_blank" title="Link opens in a new window">Marcy Sutton at Substantial.</a></h4>
+      </li>
+      <li>
+        <h4><a href="http://github.com/marcysutton/web-components-accessibility">Source on Github</a></h4>
+      </li>
+    </ul>
+  </footer>
   <script src="./assets/bower_components/platform/platform.js"></script>
   <script src="./assets/scripts/main.js"></script>
 </body>
