--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Web Components & Accessibility Sandbox</title>
-    <link rel="stylesheet" type="text/css" href="./assets/styles/main.css">
+    <link rel="stylesheet" type="text/css" href="assets/styles/main.css">
   </head>
   <body>
     <div id="container">
@@ -163,7 +163,7 @@
         </ul>
       </footer>
     </div>
-    <script src="./assets/bower_components/platform/platform.js"></script>
-    <script src="./assets/scripts/main.js"></script>
+    <script src="assets/bower_components/platform/platform.js"></script>
+    <script src="assets/scripts/main.js"></script>
   </body>
 </html>
