--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </header>
             <template class="taco-article">
               <div class="article-inner-wrapper">
-                <h2><a href="http://baltimore.craigslist.org/crg/4298347086.html" target="_blank" title="Link opens in a new window">DRIVER WITH 4 WHEEL DRIVE VEHICLE NEEDED FOR EMERGENCY TACO BELL RUN</a></h2>
+                <h2 tabIndex="0"><a href="http://baltimore.craigslist.org/crg/4298347086.html" target="_blank" title="Link opens in a new window">DRIVER WITH 4 WHEEL DRIVE VEHICLE NEEDED FOR EMERGENCY TACO BELL RUN</a></h2>
                 <p>It's a snowy night. You have a few drinks, play some video games and then it hits you–an overwhelming desire for a taco.</p>
                 <p>That's what apparently happened to one Baltimorean last night who posted on Craigslist.</p>
                 <p><a href="http://baltimore.craigslist.org/crg/4298347086.html" target="_blank" title="Link opens in a new window">View on Craigslist</a></p>
@@ -100,7 +100,7 @@
                       <button id="label1" role="tab" aria-controls="linklist1">
                         <div class="accessLabel"></div>select option
                       </button>
-                      <ul id="linklist1" role="tabpanel" aria-hidden="true" aria-labeledby="label1" tabIndex="-1">
+                      <ul id="linklist1" role="tabpanel" aria-hidden="true" aria-expanded="false" aria-labeledby="label1" tabIndex="-1">
                         <li><a href="#" aria-role="option">Link 1</a></li>
                         <li><a href="#" aria-role="option">Link 2</a></li>
                         <li><a href="#" aria-role="option">Link 3</a></li>
@@ -116,7 +116,7 @@
                               <button id="label2" role="tab" aria-controls="linklist2">
                                 <div class="accessLabel"></div>select option
                               </button>
-                              <ul id="linklist2" role="tabpanel" aria-hidden="true" aria-labeledby="label2" tabIndex="-1">
+                              <ul id="linklist2" role="tabpanel" aria-hidden="true" aria-expanded="false" aria-labeledby="label2" tabIndex="-1">
                                 <li><a href="#" aria-role="option">Link 1</a></li>
                                 <li><a href="#" aria-role="option">Link 2</a></li>
                                 <li><a href="#" aria-role="option">Link 3</a></li>
