--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </ul>
       </footer>
     </div>
-    <script src="node_modules/webcomponents.js/webcomponents.js"></script>
+    <script src="assets/webcomponents.js/webcomponents.js"></script>
     <script src="assets/scripts/main.js"></script>
   </body>
 </html>
